<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_heart_icon">Heart icon</string>
    <string name="description_repost_icon">Repost icon</string>
    <string name="description_views_icon">Views icon</string>
    <string name="post_menu_remove">Remove</string>
    <string name="post_menu_edit">Edit</string>
    <string name="post_text">Enter text</string>
    <string name="description_save_post">Save text</string>
    <string name="content_is_blank_error">Content is blank</string>
    <string name="description_edit_icon">Edit icon</string>
    <string name="post_edit_title">Edit message</string>
    <string name="description_add_new_post">Add new post</string>
    <string name="ok">OK</string>
    <string name="description_video_preview">Video preview</string>
    <string name="description_video_preview_icon">Video preview icon</string>
    <string name="choose_app_for_play_video">Choose app for play video</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api unavailable</string>
    <string name="notification_new_post">%1$s published a new post:</string>
</resources>